# notebooks

./: .eslintrc  .gitignore  Cargo.toml  README.md  default.nix  flake.nix  package-lock.json  package.json
.github/workflows/: release.yml  test.yml
applet/: package.json
applet/demo/: index.html
applet/src/: applet-main.ts  cross-applet-main.ts  index.ts
apps/app/dnas/notebooks/: dna.yaml
apps/app/dnas/syn/: dna.yaml
apps/app/ui/: package.json
apps/app/ui/src/: notebooks-app.ts  router.ts
apps/applet/dnas/notebooks/: dna.yaml
apps/applet/dnas/syn/: dna.yaml
apps/applet/ui/: package.json  rollup.config.js
apps/applet/ui/src/: index.ts  notebooks-applet.ts
apps/applet/workdir/: happ.yaml
apps/game/dnas/notebooks/: dna.yaml
apps/game/dnas/syn/: dna.yaml
apps/game/ui/: package.json  rollup.config.js
apps/game/ui/src/: index.ts  notebooks-app.ts  notebooks-game.ts
apps/game/ui/src/lib/: shared-styles.ts  utils.ts
apps/game/ui/src/lib/elements/: notes-created-by-others.ts  utils.ts
apps/game/workdir/: happ.yaml
apps/launcher/dnas/notebooks/: dna.yaml
apps/launcher/dnas/syn/: dna.yaml
apps/launcher/ui/: fixes.mjs  package.json  rollup.config.js  web-dev-server.config.mjs
apps/launcher/ui/src/: notebooks-app.ts
apps/launcher/workdir/: happ.yaml  web-happ.yaml
dnas/notebooks/integrity/profiles/: Cargo.toml
dnas/notebooks/workdir/: dna.yaml
dnas/notebooks/zomes/coordinator/attachments/: Cargo.toml
dnas/notebooks/zomes/coordinator/profiles/: Cargo.toml
dnas/notebooks/zomes/coordinator/syn/: Cargo.toml
dnas/notebooks/zomes/integrity/attachments/: Cargo.toml
dnas/notebooks/zomes/integrity/profiles/: Cargo.toml
dnas/notebooks/zomes/integrity/syn/: Cargo.toml
dnas/notebooks/zomes/notes/: Cargo.toml
dnas/notebooks/zomes/notes/src/: lib.rs
dnas/notebooks/zomes/notes/tests/: create_and_get.rs
dnas/notebooks/zomes/profiles/: Cargo.toml
dnas/syn/zomes/syn/: Cargo.toml
libs/coordinator_zomes/notes/: Cargo.toml
libs/coordinator_zomes/notes/src/: lib.rs
libs/coordinator_zomes/notes/tests/: create_and_get.rs
libs/coordinator_zomes/profiles/: Cargo.toml
libs/coordinator_zomes/syn/: Cargo.toml
libs/integrity_zomes/notes/: Cargo.toml
libs/integrity_zomes/notes/src/: lib.rs
libs/integrity_zomes/profiles/: Cargo.toml
libs/integrity_zomes/syn/: Cargo.toml
libs/ui/: LICENSE  package.json
libs/ui/src/: index.ts  notes-service.ts  notes-store.ts  types.ts
libs/ui/src/elements/: markdown-note.ts  note-collection.ts  utils.ts  workspace-list.ts
libs/zomes/notes/: Cargo.toml
libs/zomes/notes/src/: lib.rs
libs/zomes/notes/tests/: create_and_get.rs
libs/zomes/profiles/: Cargo.toml
nix/: sources.json
tests/: package.json
tests/src/: index.ts  utils.ts
tests/src/notebooks/: notes.ts
tests/src/syn/: syn.ts
ui/: globals.d.ts  index.html  package.json  rollup.config.js  tsconfig.json  vite.config.ts  web-dev-server.config.mjs
ui/app/: index.html  package.json  vite.config.ts
ui/app/src/: notebooks-app.ts
ui/applet/: package.json  rollup.config.js  tsconfig.json  vite.config.ts
ui/applet/demo/: index.html
ui/applet/src/: applet-main.ts  cross-applet-main.ts  index.ts  notebooks-applet.ts  we-applet.ts
ui/lib/: README.md  package.json  tsconfig.json
ui/lib/src/: context.ts  index.ts  notes-store.ts
ui/lib/src/elements/: all-notes.ts  markdown-note.ts  workspace-list.ts
ui/src/: export.ts  grammar.ts  holochain-app.ts  index.ts  notebooks-app.ts  router.ts  store.ts  types.ts  utils.ts  we-applet.ts
ui/src/elements/: agent-cursor.ts  all-notes.ts  column-label.ts  commit-history.ts  markdown-note.ts  syn-md-editor.ts  workspace-list.ts
ui/src/lib/: context.ts  notes-service.ts  notes-store.ts  types.ts
ui/src/lib/elements/: markdown-note.ts  note-collection.ts  notes-created-by-me.ts  notes-created-by-others.ts  utils.ts
ui/workdir/: web-happ.yaml
we_dev/: config.json  config.ts
workdir/: happ.yaml
