[package]
edition = "2021"
name = "notes"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "notes"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
derive_more = "0"
serde = "1"
regex = "1"

hdk = {version = "0.0.142", features = ["encoding"]}

[dev-dependencies]
fixt = "0.0.11"
futures = {version = "0.3.1", default-features = false}
hdk = {version = "0.0.142", features = ["encoding", "test_utils"]}
holochain = {version = "0.0.150", default-features = false, features = ["test_utils"]}
tokio = {version = "1.3", features = ["full"]}
