[package]
edition = "2021"
name = "notes"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "notes"

[dependencies]
chrono = { version = "=0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
derive_more = "0"
regex = "1"
serde = "1"

hdk = {version = "0.0.147", features = ["encoding"]}
notes_integrity = {path = "../../integrity_zomes/notes"}

[dev-dependencies]
fixt = "0.0.14"
futures = {version = "0.3.1", default-features = false}
hdk = {version = "0.0.147", features = ["encoding", "test_utils"]}
holochain = {version = "0.0.155", default-features = false, features = ["test_utils"]}
tokio = {version = "1.3", features = ["full"]}
