[package]
edition = "2018"
name = "notes"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "notes"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
derive_more = "0"
serde = "1"

hdk = {version = "0.0.124", features = ["encoding"]}

[dev-dependencies]
fixt = "0.0.6"
futures = {version = "0.3.1", default-features = false}
holochain = {version = "0.0.129", default-features = false, features = ["test_utils"]}
tokio = {version = "1.3", features = ["full"]}
