[package]
edition = "2018"
name = "notes"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "notes"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
derive_more = "0"
serde = "1"

hdk = {version = "0.0.130", features = ["encoding", "fixturators"]}

[dev-dependencies]
fixt = "0.0.6"
futures = {version = "0.3.1", default-features = false}
hdk = {version = "0.0.130", features = ["encoding", "test_utils", "fixturators"]}
holochain = {version = "0.0.136", default-features = false, features = ["test_utils"]}
tokio = {version = "1.3", features = ["full"]}
