[package]
edition = "2018"
name = "syn"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "syn"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
derive_more = "0"
serde = "1"

hc_zome_syn = {git = "https://github.com/holochain/syn", rev = "422a48b96ce11b233fdd63b7e33c03dab4fa2d4a"}
